import logging
from utils import Utils
from requests.exceptions import RequestException

class Attacks:
    @staticmethod
    def sql_injection(url: str, payload: dict) -> str:
        """
        Performs an SQL injection attack by sending a malicious payload to the specified URL.

        Args:
            url (str): The URL where the SQL injection will be attempted.
            payload (dict): The payload containing malicious SQL code.

        Returns:
            str: The result of the attack attempt.
        """
        try:
            response = Utils.send_request('POST', url, data=payload)
            parsed_response = Utils.parse_response(response)
            return f"SQL Injection attack response: Status - {parsed_response['status']}, Data - {parsed_response['data']}"
        except RequestException as e:
            logging.error(f"SQL Injection failed: {e}")
            return "SQL Injection attack failed."

    @staticmethod
    def xss_attack(url: str, script: str) -> str:
        """
        Performs a Cross-Site Scripting (XSS) attack by sending a script to the specified URL.

        Args:
            url (str): The URL where the XSS attack will be attempted.
            script (str): The malicious script to be injected.

        Returns:
            str: The result of the attack attempt.
        """
        try:
            payload = {'comment': script}
            response = Utils.send_request('POST', url, data=payload)
            parsed_response = Utils.parse_response(response)
            return f"XSS attack response: Status - {parsed_response['status']}, Data - {parsed_response['data']}"
        except RequestException as e:
            logging.error(f"XSS attack failed: {e}")
            return "XSS attack failed."

    @staticmethod
    def auth_bypass(url: str, data: dict) -> str:
        """
        Attempts to bypass authentication by exploiting vulnerabilities in the authentication mechanism.

        Args:
            url (str): The URL where the authentication bypass will be attempted.
            data (dict): The data used to attempt to bypass authentication.

        Returns:
            str: The result of the bypass attempt.
        """
        try:
            response = Utils.send_request('GET', url, data=data)
            parsed_response = Utils.parse_response(response)
            return f"Authentication Bypass response: Status - {parsed_response['status']}, Data - {parsed_response['data']}"
        except RequestException as e:
            logging.error(f"Authentication Bypass failed: {e}")
            return "Authentication Bypass failed."
