import requests
import logging

class Utils:
    @staticmethod
    def send_request(method: str, url: str, data: dict = None) -> dict:
        """
        Sends an HTTP request based on the specified method, URL, and data.

        Args:
            method (str): The HTTP method to use ('GET', 'POST', 'PUT', 'DELETE', etc.).
            url (str): The URL to which the request is sent.
            data (dict, optional): The data to send in the request. Defaults to None.

        Returns:
            dict: A dictionary containing the response data.
        """
        try:
            if method.upper() == 'GET':
                response = requests.get(url, params=data)
            elif method.upper() == 'POST':
                response = requests.post(url, data=data)
            elif method.upper() == 'PUT':
                response = requests.put(url, data=data)
            elif method.upper() == 'DELETE':
                response = requests.delete(url, data=data)
            else:
                raise ValueError("Unsupported HTTP method provided.")

            return {'status_code': response.status_code, 'content': response.text}
        except requests.RequestException as e:
            logging.error(f"Request failed: {e}")
            return {'status_code': 500, 'content': str(e)}

    @staticmethod
    def parse_response(response: dict) -> dict:
        """
        Parses the HTTP response to extract relevant information.

        Args:
            response (dict): The response dictionary containing 'status_code' and 'content'.

        Returns:
            dict: A dictionary with parsed data.
        """
        parsed_data = {
            'status': 'success' if response['status_code'] == 200 else 'error',
            'data': response['content']
        }
        return parsed_data
