
classDiagram
    class Main {
        +main() void
    }
    class Attacks {
        +sql_injection(url: str, payload: dict) str
        +xss_attack(url: str, script: str) str
        +auth_bypass(url: str, data: dict) str
    }
    class Utils {
        +send_request(method: str, url: str, data: dict) dict
        +parse_response(response: dict) dict
    }
    Main --> Attacks
    Attacks --> Utils
